src/style-guide.less
/* ... */
.is-bubbles.small-bubbles{
  figure{
    top: ~'calc(50% - 78px/2)';

    img{
      max-width:45px;
    }

    figcaption{
      font-size:@fs_small;
    }
  }
}

//modals
.modal-backdrop{
  .col(#10321D, b);
}

.modal-content{
  padding: 10px;
  border: @bst @ws;

  @media only screen and (min-width:@bp_sm){
    padding:20px;
  }
}

/*
 * Spinners and loaders
 *
 */
.is-loader-container{
  width:200px;
  height:200px;
  margin:30px auto;
  .border-radius(5px);
  .col(@w, b);
  .ta-c();
  padding-top:20px;
  border:@bst @col_gray_4;

  .is-loader{
    width:90px;
    height:90px;
    .col(@w, b);
    overflow:hidden;
    .border-radius(50%);
    border:@bstm @col_base_3;
    .rel();
    margin:15px auto;
    z-index:1;
    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC); //fixes webkit bug

    .element-animation{
      .abs();
      .stretch();
      .stretch(h);
      animation-name:loaderAnimation;
      animation-iteration-count: infinite;
      animation-fill-mode: forwards;
      animation-timing-function: linear;
      animation-duration: 5s;

      img{
        max-width:none;
      }
    }//element-animation
  }//is-loader
}//loader container

.is-story-container{
  .is-loader-container{
    height: 160px;
  }


  .is-loader-story{
    .stretch();
    margin-top:20px;
    margin-bottom:20px;
    .ta-c();
  }//is-loader-story
}

//spinner
.is-spinner{
  width: 18px;
  height: 18px;
  margin: 0 5px 0 5px;
  .inline-block();
  border-top: @bstm @col_base_3;
  border-bottom: @bstm @col_base_3;
  border-right: @bstm transparent;
  border-left: @bstm transparent;
  .border-radius(50%);

  animation-name: spinnerAnimation;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-duration: 0.75s;
}

.light-green-spinner{
  border-top: @bstm @col_base_2;
  border-bottom: @bstm @col_base_2;
}

.gray-spinner{
  border-top: @bstm @col_gray_5;
  border-bottom: @bstm @col_gray_5;
}

.black-spinner{
  border-top: @bstm @b;
  border-bottom: @bstm @b;
}

.white-spinner{
  border-top: @bstm @w;
  border-bottom: @bstm @w;
}

/*
 * NEW! IS-specific el
 */

@thumbnail_width: 240px;
@thumbnail_height: @thumbnail_width/16 * 9;

.is-list{
  list-style-type: none;
  padding-left:0;
  margin-bottom:@gs*3;

  md-list-item{
    md-select{
      padding:0;
    }
  }

  .md-button{
    flex-shrink: 0;
  }

  .is-list-item{
    .rel();
    padding:@gs @gs*2;
    .col(@ws, b);
    display: flex;
    justify-content: center;
    align-items: center;

    &:nth-child(even){
      .col(@w, b);
    }

    &__avatar.md-avatar{
      font-size: 30px;
      width: auto;
      height: auto;
    }

    &__btn.md-fab{
      transform:none;

      .fa{
        margin-right:0;
        line-height: 1.6;
      }
    }

    h2{
      margin-top:0;
    }

    .md-list-item-text{
      flex-grow:1;
      flex-basis:100%;
    }

    &.is-playlist-rows{
      padding:0;
      align-items:center;

      .is-playlist-rows__inner{
        width:100%;
        display:flex;
        padding:@gs @gs*2;
        transition: background @animation_time_short @transition_default;

        h3, h2{
          margin-top:0;
        }

        &__image{
          background-color: @col_gray_8;
          display:flex;
          flex-shrink:0;
          justify-content:center;
          align-items:center;
          transition: opacity @animation_time_short @transition_default;
          width: @thumbnail_width;
          height: @thumbnail_height;

          &:hover, &:focus{
            opacity:0.7;
            transition: opacity @animation_time_short @transition_default;
          }

          a{
            background-repeat: no-repeat;
            background-position: center center;
            background-size: contain;
            margin: -5px; //needed to cover eventual rounding errors
            display: block;
            flex-grow: 1;
            flex-basis: 100%;
            height: 100%;
          }
        }

        &__details{
          display: flex;
          flex-direction: column;
          justify-content: center;
          padding: @gs @gs*2 @gs/2 @gs*2;

          a:not(.md-button){
            color: @col_gray_7;

            &:hover, &:focus{
              color: @col_gray_8;
            }
          }

          &__item{
            font-family:@ff_default;
            font-size:@fs_small;
            margin-right: @gs/2;
            position: relative;
            top: -10px;
          }

          &__slides{
            margin-bottom:0;
          }

          &--top{
            margin-bottom: 0;
            display: flex;
          }

          &--bottom{
            margin-top:auto;
            display:flex;
            align-items:center;
          }
        }
      }

      .is-playlist-rows__controls{
        padding:@gs @gs*2 @gs 0;

        .md-button{
          top: 0;
        }
      }
    }//is-playlist-rows

    &--title{
      [class*='is-label-']{
        margin: 0;
      }
    }
  }

  &--tight{
    margin-bottom:0;

    .md-subheader{
      padding:0;
    }

    h3{
      display: flex;
      align-items: center;
    }

    md-select{
      .rel();
      top:-1px;
      margin-left:5px;
    }
  }

  &--wide{
    padding: @gs*2;

    md-list-item{
      padding:0;
    }
  }

  &--bg{ //List with a gray background, like the one in schedule management
    background-color:@col_gray_3;
    border-bottom: @bst @col_gray_5;
  }

  &--reverse-col{
    .is-list-item{
      background-color:@w;

      &:nth-child(even){
        background-color:@ws;
      }
    }
  }
}
/* ... */

